<?xml version="1.0"?>
<package>
  <name>nearfield_map</name>
  <version>1.0.0</version>
  <description>The proaut nearfield_map package</description>
  <maintainer email="wepet@hrz.tu-chemnitz.de">wepet</maintainer>
  <license>other</license>

  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>roscpp</build_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_depend>tf</build_depend>

  <build_depend>parameter_pa</build_depend>
  <build_depend>octomap_pa</build_depend>
  <build_depend>pcdfilter_pa</build_depend>


  <run_depend>roscpp</run_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>message_runtime</run_depend>

  <run_depend>tf</run_depend>

  <run_depend>parameter_pa</run_depend>
  <run_depend>octomap_pa</run_depend>
  <run_depend>pcdfilter_pa</run_depend>


</package>
