<?xml version="1.0"?>
<package format="2">
    <name>nearfield_map</name>
    <version>1.0.0</version>
    <description>ProAut nearfield_map package</description>
    <maintainer email="wepet@hrz.tu-chemnitz.de">Peter Weissig</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>


    <depend>roscpp</depend>

    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>std_srvs</depend>

    <depend>tf</depend>
    <depend>laser_geometry</depend>

    <depend>pcl_ros</depend>
    <depend>pcl_conversions</depend>

    <depend>parameter_pa</depend>
    <depend>pcdfilter_pa</depend>
    <depend>octomap_pa</depend>


    <build_depend>message_generation</build_depend>
    <build_export_depend>message_runtime</build_export_depend>
    <exec_depend>message_runtime</exec_depend>


    <doc_depend>doxygen</doc_depend>
    <doc_depend>parameter_pa</doc_depend>
    <doc_depend>pcdfilter_pa</doc_depend>
    <doc_depend>octomap_pa</doc_depend>

</package>
